see all kits edit under study detail page

--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -12,7 +12,8 @@
     </style>
 
     <div class="box">
-        <H1><b style="font-size: .75em;">Kits</b></H1>
+        <H1><b style="font-size: .75em;">Types of Kits</b></H1>
+        <p></p>
         <hr>
          <form method="get">
            {{ myFilter.form }}
