--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -24,14 +24,19 @@
     <p><b>Sponsor: </b>{{ study.sponsor_name }}</p>
 
     {% if study.comment == ''%}
-        <p><b>Notes:</b> <em>No additional notes were added for this study.</em></p>
+        <p><b>Notes:</b> <em>No additional notes were added.</em></p>
     {% else %}
         <p><b>Notes:</b> {{ study.comment }}</p>
 
     {% endif %}
 
-    <hr>
 
+    {% if kit_exist == 'False' %}
+
+        <p><b>Kit Information: </b>No kits have been added to this study. To edit, go to 'Check-In Kits'</p>
+
+    {% else %}
+        <hr>
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
@@ -55,7 +60,7 @@
                     <td>{{ kit.location }}
                     <td>{{ new_req.description }}</td>
                     <td>{{ kit.description }}</td>
-                    <td><a href="{% url 'KITS:kit_edit_from_study' pk=kit.pk %}" class="btn btn-warning">Edit Details</a></td>
+                    <td><a href="{% url 'KITS:kit_edit_from_study' pk=kit.pk %}" class="btn btn-warning">Edit kit details</a></td>
 
 
                 </tr>
@@ -64,8 +69,9 @@
             </tbody>
         </table>
 
-        <a href="{% url 'KITS:study_detail_seeallkits' pk=study.pk %}" class="btn btn-warning">See all kits in this study</a>
 
+        <a href="{% url 'KITS:study_detail_seeallkits' pk=study.pk %}" class="btn btn-warning">See all kits in this study</a>
+    {% endif %}
     <hr>
 
     <div class="column">
@@ -74,7 +80,13 @@
         <p> {{ kit_order }} </p>
 
             {% if study.kitorder.type == 'link' or study.kitorder.type == 'file'%}
-                <p><b>Notes: </b> {{study.kitorder.description}}</p>
+
+                    {% if study.kitorder.description == ''%}
+                            <p></p>
+                    {% else %}
+                        <p><b>Description:</b> {{ study.kitorder.description }}</p>
+                    {% endif %}
+
             {% endif %}
 
         <a href="{% url 'KITS:kit_ordering' pk=study.pk %}" class="btn btn-success">Edit kit ordering details</a>
