--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -33,17 +33,17 @@
 
     {% if kit_exist == 'False' %}
 
-        <p><b>Kit Information: </b>No kits have been added to this study. To edit, go to 'Check-In Kits'</p>
+        <p><b>Kits: </b>No kits have been added to this study. To edit, go to 'Check-In Kits'</p>
 
     {% else %}
         <hr>
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
-                <th>Type of Kit</th>
-                <th>Available Kits</th>
-                <th>Expired Kits</th>
-                <th>Last to expire</th>
+                <th>Kit Name</th>
+                <th>Kits Available</th>
+                <th>Kits Expired</th>
+                <th>Kit last to expire</th>
                 <th>Location</th>
                 <th>Requisition</th>
                 <th>Additional notes</th>
