--- a/templates/KITS/study_detail_seeallkits.html
+++ b/templates/KITS/study_detail_seeallkits.html
@@ -11,7 +11,7 @@
 }
     </style>
     <div class="box">
-        <H1><b style="font-size: .75em;">All kits for IRB: {{ study.IRB_number }} ({{ study.pet_name }})</b></H1>
+        <H1><b style="font-size: .75em;">Study {{ study.IRB_number }} {{ study.pet_name }} > All Kits In Inventory</b></H1>
         <hr>
 
 
