--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -19,7 +19,7 @@
         <a href="{% url 'KITS:home' %}">Home</a>
         <a href="{% url 'KITS:study_list' %}">Studies</a>
         <a href="{% url 'KITS:kit_list' %}">Check-In Kits</a>
-        <a href="{% url 'KITS:home' %}">Check-Out Kits</a>
+        <a href="{% url 'KITS:kit_checkout' %}">Check-Out Kits</a>
         <a href="{% url 'KITS:report' %}">Reports</a>
         <!-- <a href="{% url 'KITS:home2' %}">New Home (Test)</a> -->
 
