--- a/templates/KITS/study_detail_seeallkits.html
+++ b/templates/KITS/study_detail_seeallkits.html
@@ -23,6 +23,7 @@
                 <th>Expiration Date</th>
                 <th>Status</th>
                 <th>Location</th>
+                <th>Actions</th>
             </tr>
             </thead>
 
@@ -43,6 +44,11 @@
                             <p>expired</p>
                         {% endif %}</th>
                     <th>{{ kit.kit.location }}</th>
+                    <th><a href="" class="btn btn-warning">Edit</a>
+                        <a href=""
+                        onclick="return confirm('Are you sure you want to demolish the {{ kit.kit.type_name}} kit ?')"
+                        class="btn btn-danger">Demolish</a></th>
+
                 </tbody>
                 {% endfor %}
             </table>
