--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -11,6 +11,16 @@
 }
     </style>
 
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-danger" role="alert">
+            {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+
+
     <div class="box">
         <H1><b style="font-size: .75em;">Types of Kits</b></H1>
         <p></p>
@@ -19,6 +29,8 @@
            {{ myFilter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
+
+
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
@@ -39,10 +51,12 @@
 
 
                 <td><a href="{% url 'KITS:kit_edit' pk=kit.pk%}" class="btn btn-warning">Edit</a>
+                <a href="{% url 'KITS:kit_addkitinstance' pk=kit.pk %}" class="btn btn-warning">Add Kit Instance</a>
                 <a href="{% url 'KITS:kit_delete' pk=kit.pk%}"
                     onclick="return confirm('Are you sure you want to delete Kit {{ kit.id }} under IRB#{{ kit.IRB_number }}? Do you have proper authorization?')"
-                       class="btn btn-warning">Delete</a>
-                <a href="{% url 'KITS:kit_addkitinstance' pk=kit.pk %}" class="btn btn-warning">Add Kit Instance</a></td>
+                       class="btn btn-danger">Delete</a>
+                </td>
+
 
             </tr>
              {% endfor %}
