--- a/templates/KITS/study_list.html
+++ b/templates/KITS/study_list.html
@@ -15,6 +15,14 @@
         <hr>
 
 
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-success" role="alert">
+                {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+
         <form method="get">
            {{ myFilter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
