Added Requisition info add/edit, configured file uploads

--- a/templates/KITS/create_req.html
+++ b/templates/KITS/create_req.html
@@ -13,7 +13,7 @@
     <div class="box">
         <H1><b style="font-size: .75em;">Add Requisition Information</b></H1>
         <hr>
-        <form method="POST" class="study-form">{% csrf_token %}
+        <form method="POST" class="study-form" enctype="multipart/form-data">{% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Confirm</button>
         </form>
