--- a/templates/KITS/kit_ordering.html
+++ b/templates/KITS/kit_ordering.html
@@ -16,7 +16,7 @@
 
     <div class="box">
     <h1>Edit Kit Ordering</h1>
-    <form method="POST" class="">{% csrf_token %}
+    <form method="POST" class="" enctype="multipart/form-data">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-success">Update</button>
     </form>
