--- a/templates/KITS/study_detail.html
+++ b/templates/KITS/study_detail.html
@@ -7,7 +7,7 @@
     margin: 8px;
     border: 1px solid silver;
     padding: 10px;
-    padding-bottom:100px;
+    padding-bottom: 100px;
     border-radius: 4px;
 }
     .column {
@@ -16,104 +16,116 @@
         border-right: 1px;
     }
     </style>
+
     <div class="box">
-    <H1><b style="font-size: .75em;">Study: {{ study }} {{ study.pet_name }}</b></H1>
+        <H1><b style="font-size: .75em;">Study: {{ study }} {{ study.pet_name }}</b></H1>
 
-    <hr>
-
-    <p><b>Status: </b>{{ study.status }}</p>
-    <p><b>Sponsor: </b>{{ study.sponsor_name }}</p>
-
-    {% if study.comment == ''%}
-        <p><b>Notes:</b> <em>No additional notes were added.</em></p>
-    {% else %}
-        <p><b>Notes:</b> {{ study.comment }}</p>
-
-    {% endif %}
-
-    <a class="btn btn-warning" href="{% url 'KITS:study_detail_study_edit' pk=study.pk %}">Edit Study Details</a>
-    <hr>
-    {% if kit_exist == 'False' %}
-
-        <p><b>Kits: </b>No kits have been added to this study. To add kits, go to 'Check-In Kits' page.</p>
-
-    {% else %}
         <hr>
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-            <tr class="bg-info">
-                <th>Kit Name</th>
-                <th>Available Kits</th>
-                <th>Expired Kits</th>
-                <th>Kit last to expire</th>
-                <th>Location</th>
-                <th>Requisition</th>
-                <th>Additional notes</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for kit in kits %}
-                <tr>
-                    <td>{{ kit.type_name }}</td>
-                    <td>{{ kit.no_of_kits }}</td>
-                    <td>{{ kit.no_of_kits_exp }}</td>
-                    <td>{{ kit.exp }}</td>
-                    <td>{{ kit.location }}
-                    <td>{{ new_req.description }}</td>
-                    <td>{{ kit.description }}</td>
-                    <td><a href="{% url 'KITS:kit_edit_from_study' pk=kit.pk %}" class="btn btn-warning">Edit kit details</a></td>
 
+        <p><b>Status: </b>{{ study.status }}</p>
+        <p><b>Sponsor: </b>{{ study.sponsor_name }}</p>
 
+        {% if study.comment == ''%}
+            <p><b>Notes:</b> <em>No additional notes were added.</em></p>
+        {% else %}
+            <p><b>Notes:</b> {{ study.comment }}</p>
+
+        {% endif %}
+
+        <a class="btn btn-warning" href="{% url 'KITS:study_detail_study_edit' pk=study.pk %}">Edit Study Details</a>
+        <hr>
+        {% if kit_exist == 'False' %}
+
+            <p><b>Kits: </b>No kits have been added to this study. To add kits, go to 'Check-In Kits' page.</p>
+
+        {% else %}
+            <hr>
+            <table class="table table-striped table-bordered table-hover">
+                <thead>
+                <tr class="bg-info">
+                    <th>Kit Name</th>
+                    <th>Available Kits</th>
+                    <th>Expired Kits</th>
+                    <th>Kit last to expire</th>
+                    <th>Location</th>
+                    <th>Requisition</th>
+                    <th>Additional notes</th>
+                    <th>Actions</th>
                 </tr>
-
-            {% endfor %}
-            </tbody>
-        </table>
-
-
-        <a href="{% url 'KITS:study_detail_seeallkits' pk=study.pk %}" class="btn btn-warning">See all kits in inventory</a>
-        <p style="padding-top:10px;">To add more kits, please go to 'Check-In Kits' page.</p>
-
-    {% endif %}
-    <hr>
-
-    <div class="column">
-    {% if test == 'True' %}
-        <h3> Kit Ordering Info</h3>
-        <p> {{ kit_order }} </p>
-
-            {% if study.kitorder.type == 'link' or study.kitorder.type == 'file'%}
-
-                    {% if study.kitorder.description == ''%}
-                            <p></p>
-                    {% else %}
-                        <p><b>Description:</b> {{ study.kitorder.description }}</p>
-                    {% endif %}
-
-            {% endif %}
-
-        <a href="{% url 'KITS:kit_ordering' pk=study.pk %}" class="btn btn-success">Edit kit ordering details</a>
+                </thead>
+                <tbody>
+                {% for kit in kits %}
+                    <tr>
+                        <td>{{ kit.type_name }}</td>
+                        <td>{{ kit.no_of_kits }}</td>
+                        <td>{{ kit.no_of_kits_exp }}</td>
+                        <td>{{ kit.exp }}</td>
+                        <td>{{ kit.location }}
+                        <td>{{ new_req.description }}</td>
+                        <td>{{ kit.description }}</td>
+                        <td><a href="{% url 'KITS:kit_edit_from_study' pk=kit.pk %}" class="btn btn-warning">Edit kit details</a></td>
 
 
-    {% elif test == 'False' %}
+                    </tr>
 
-        <p>{{ kit_order }}</p>
-        <a href="{% url 'KITS:kit_ordering_add' pk=study.pk %}" class="btn btn-success">Add Kit Ordering Info</a>
-
-    {% endif %}
-
-
-    </div>
-
-    <h3>Requisition Info </h3>
-    <a href="{% url 'KITS:create_req' pk=study.pk %}" class="btn btn-success">Add Requisition Info</a>
-    <a class="btn btn-warning" href="{% url 'KITS:req_edit' pk=study.pk %}">Edit Requisition Info</a>
+                {% endfor %}
+                </tbody>
+            </table>
 
 
+            <a href="{% url 'KITS:study_detail_seeallkits' pk=study.pk %}" class="btn btn-warning">See all kits in inventory</a>
+            <p style="padding-top:10px;">To add more kits, please go to 'Check-In Kits' page.</p>
+
+        {% endif %}
+        <hr>
+
+        <div class="column">
+        {% if test == 'True' %}
+            <h3> Kit Ordering Info</h3>
+            <p> {{ kit_order }} </p>
+
+                {% if study.kitorder.type == 'link' or study.kitorder.type == 'file'%}
+
+                        {% if study.kitorder.description == ''%}
+                                <p></p>
+                        {% else %}
+                            <p><b>Description:</b> {{ study.kitorder.description }}</p>
+                        {% endif %}
+
+                {% endif %}
+
+            <a href="{% url 'KITS:kit_ordering' pk=study.pk %}" class="btn btn-info">Edit kit ordering details</a>
+
+
+        {% elif test == 'False' %}
+
+            <p>{{ kit_order }}</p>
+            <a href="{% url 'KITS:kit_ordering_add' pk=study.pk %}" class="btn btn-success">Add Kit Ordering Info</a>
+
+        {% endif %}
+
+        </div>
+
+        <div class="column">
+        {% if req_exist %}
+            <h3>Requisition Info</h3>
+
+                {% if study.requisition.type == 'link' %}
+                    <p>{{ study.requisition.link }}</p>
+                {% elif study.requisition.type == 'file' %}
+                    <p>{{ study.requisition.file }}</p>
+                {% endif %}
+
+            <p><b>Description:</b> {{ study.requisition.description }}</p>
+            <a href="{% url 'KITS:req_edit' pk=study.pk %}" class="btn btn-info">Edit Requisition Info</a>
+
+        {% else %}
+            <p>{{ req }}</p>
+            <a href="{% url 'KITS:create_req' pk=study.pk %}" class="btn btn-success">Add Requisition Info</a>
+        {% endif %}
+        </div>
 
 {% endblock %}
 
     </div>
-
 </html>
