--- a/templates/KITS/report_expiredkits.html
+++ b/templates/KITS/report_expiredkits.html
@@ -15,7 +15,7 @@
         <hr>
     <p> {{ test }}</p>
     <form method="get">
-           {{ myFilter.form }}
+           {{ kit_report_filter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
 
