--- a/templates/KITS/kit_list.html
+++ b/templates/KITS/kit_list.html
@@ -26,7 +26,7 @@
         <p></p>
         <hr>
          <form method="get">
-           {{ myFilter.form }}
+           {{ kit_filter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
 
