--- a/templates/KITS/study_list.html
+++ b/templates/KITS/study_list.html
@@ -24,7 +24,7 @@
         {% endif %}
 
         <form method="get">
-           {{ myFilter.form }}
+           {{ study_filter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
 
