Code cleanup according to PEP8 standards

--- a/templates/KITS/kitinstance_statusedit.html
+++ b/templates/KITS/kitinstance_statusedit.html
@@ -16,7 +16,7 @@
 
     <div class="box">
 
-    <H1><b style="font-size: .75em;">checking out kit{{kitinstance.kit_id]}</b></H1>
+    <H1><b style="font-size: .75em;">checking out kit{{kitinstance.kit_id}}</b></H1>
 
     <form method="POST" class="">{% csrf_token %}
         {{ form.as_p }}
