--- a/templates/KITS/kit_checkout.html
+++ b/templates/KITS/kit_checkout.html
@@ -15,9 +15,10 @@
 
         <hr>
         <form method="get">
-           {{ kit_instance_filter.form }}
+           {{ kitinstance_filter.form }}
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
+
     <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
@@ -37,8 +38,8 @@
                 <td>{{ kitinstance.id }}</td>
                 <td>{{ kitinstance.status}}</td>
                 <td>{{ kitinstance.expiration_date}}</td>
-                <td><a href="{% url 'KITS:kitinstance_statusedit' pk=kitinstance.pk%}"
-                    onclick="return confirm('Are you sure you want to checkout Kit {{ kit.id }}?')"
+                <td><a href="{% url 'KITS:kitinstance_statusedit' kitinstance.kit_id%}"
+                    onclick="return confirm('Are you sure you want to checkout Kit {{ kitinstance.kit_id }}?')"
                     class="btn btn-warning">Checkout</a></td>
 
 
