Added Kit Instance Change History

--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -21,6 +21,7 @@
         <a href="{% url 'KITS:kit_list' %}">Check-In Kits</a>
         <a href="{% url 'KITS:kit_checkout' %}">Check-Out Kits</a>
         <a href="{% url 'KITS:report' %}">Reports</a>
+        <a href="{% url 'KITS:list_history' %}">Kit Instance Changes</a>
         <a href="{% url 'KITS:help' %}">Help</a>
         <!-- <a href="{% url 'KITS:home2' %}">New Home (Test)</a> -->
 
