--- a/templates/KITS/report_expiredkits_studies.html
+++ b/templates/KITS/report_expiredkits_studies.html
@@ -19,7 +19,7 @@
             <tr class="bg-info">
                 <th>IRB</th>
                 <th>Pet Name</th>
-                <th>Number of expired kits</th>
+                <th>Number of Expired Kits</th>
 
 
 
