HTML cleanup, formatting, forms edit, and layout. FINAL FOR S2. ʎppnq ɥɥɥɐɐɐǝǝǝʎʎʎʎ

--- a/templates/KITS/kit_checkout.html
+++ b/templates/KITS/kit_checkout.html
@@ -33,7 +33,7 @@
                 <th>IRB #</th>
                 <th>Status</th>
                 <th>Expiration Date</th>
-                <th>Checkout Confirm</th>
+                <th>Actions</th>
 
 
             </tr>
