--- a/templates/KITS/kit_checkout.html
+++ b/templates/KITS/kit_checkout.html
@@ -45,11 +45,11 @@
                 <td>{{ kitinstance.kit.type_name}}</td>
                 <td>{{ kitinstance.kit.IRB_number }}</td>
                 <td>{% if kitinstance.status == 'a' %}
-                        <p><b style="color:green">Available</b></p>
+                        <p><b style="color:forestgreen">Available</b></p>
                     {% elif kitinstance.status == 'c' %}
-                     <p><b style="color:yellow">Checked-Out</b></p>
+                     <p><b style="color:orange">Checked-Out</b></p>
                     {% elif kitinstance.status == 'd' %}
-                    <p><b style="color:red">Demolished</b></p>
+                    <p><b style="color:darkred">Demolished</b></p>
                     {% elif kitinstance.status == 'e' %}
                          <p><b style="color:black">Expired</b></p>
                 {% endif %}</td>
