colorblind friendly, button name, login_required for list_history,

--- a/templates/KITS/kit_checkout.html
+++ b/templates/KITS/kit_checkout.html
@@ -49,7 +49,7 @@
                     {% elif kitinstance.status == 'c' %}
                      <p><b style="color:orange">Checked-Out</b></p>
                     {% elif kitinstance.status == 'd' %}
-                    <p><b style="color:darkred">Demolished</b></p>
+                    <p><b style="color:orangered">Demolished</b></p>
                     {% elif kitinstance.status == 'e' %}
                          <p><b style="color:black">Expired</b></p>
                 {% endif %}</td>
