--- a/templates/KITS/report.html
+++ b/templates/KITS/report.html
@@ -15,8 +15,9 @@
         <hr>
 
         <H2>Expired Kits</H2>
-    <a href="{%  url 'KITS:report_expiredkits' %}" class="btn btn-success">List of all expired kits</a>
-    <a href="{%  url 'KITS:report_expiredkits_studies' %}" class="btn btn-success">List of studies with expired kits</a>
+        <a href="{%  url 'KITS:report_expiredkits' %}" class="btn btn-success">List of all expired kits</a>
+        <a href="{%  url 'KITS:report_expiredkits_studies' %}" class="btn btn-success">List of studies with expired kits</a>
+        <a href="{%  url 'KITS:report_activestudies' %}" class="btn btn-success">Active and Less Active Studies</a>
 
     </div>
 {% endblock %}
