--- a/templates/KITS/home.html
+++ b/templates/KITS/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 
-{% extends 'KITS/base.html' %}
+{% extends 'KITS/base2.html' %}
 {% block content %}
 
     <style>
