--- a/templates/KITS/kit_addkittype.html
+++ b/templates/KITS/kit_addkittype.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'KITS/base.html' %}
+{% extends 'KITS/base2.html' %}
 {% block content %}
     <style>
     .box {
