--- a/templates/KITS/report_activestudies.html
+++ b/templates/KITS/report_activestudies.html
@@ -56,6 +56,8 @@
         <button class="btn btn-primary" type="submit">Search</button>
         </form>
 
+        <p> Kit Activity from {{ startdate }} to {{ enddate }}</p>
+
         <div class="row">
         <div class="column12" style="background-color:#aaa; margin-left: 12px;">
         <h2>Most Active Studies</h2>
