--- a/templates/KITS/report_userstudies.html
+++ b/templates/KITS/report_userstudies.html
@@ -11,17 +11,18 @@
 }
     </style>
         <div class="box">
-        <H1><b style="font-size: .75em;">Study Status Activity-> User#Needs#to#be#dynamic</b></H1>
+        <H1><b style="font-size: .75em;">Study Status Activity-> USER_NAME</b></H1>
         <hr>
         <p><b style="font-size: 1.4em;">Studies Created</b></p>
-        <p><b style="font-size: 1.2em;">Studies Opened</b></p>
-        <p><b style="font-size: 1.2em;">Studies Archived</b></p>
+        <p><b style="font-size: 1.2em;">Studies Opened (2nd col)</b></p>
+        <p><b style="font-size: 1.2em;">Studies Archived(3rd col)</b></p>
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
                 <th>#</th>
-                <th>StUdy ID</th>
-                <th>Date/Time</th>
+                <th>IRB Number</th>
+                <th>Pet Name</th>
+                <th>User ID</th>
             </tr>
             </thead>
             <tbody>
@@ -29,8 +30,8 @@
             <tr>
                 <td>{{ forloop.counter }}</td>
                 <td>{{ instances.IRB_number }}</td>
-                <td>{{ instances.created_date }}</td>
-
+                <td>{{ instances.pet_name }}</td>
+                 <td>{{ instances.history_user_id }}</td>
 
             </tr>
             {% endfor %}
